--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Alexander Pirsig <self@pirsig.net>",
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
+    "coffee-script": "^1.8.0",
+    "ejs": "^1.0.0",
     "express": "^4.10.6",
-    "socket.io": "^1.2.1"
+    "gpio": "^0.2.6",
+    "socket.io": "^1.2.1",
+    "underscore": "^1.7.0"
   }
 }
