--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "hammerjs": "~2.0.4",
+    "modernizr": "~2.8.3"
   }
 }
